# CucumbersAgents

./: .gitignore  README.md  __init__.py  analyzer.py  antifraud.py  base.py  claude.md  config.py  llm_provider.py  orchestrator.py  pyproject.toml  router.py  summarizer.py  tools.py  transcription.py
ai/context/: analytics.md  customer_notes.md  project.md  tasks.md
complaintagents/: __init__.py  analyzer.py  antifraud.py  base.py  claude.md  config.py  llm_provider.py  models.py  orchestrator.py  router.py  summarizer.py  tools.py  transcription.py
tests/: __init__.py  conftest.py  test_agents.py  test_models.py  test_tools.py
