[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cucumbers-agents"
version = "1.0.0"
description = "LangChain-based multi-agent system for complaint processing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Cucumbers Team" }
]
keywords = [
    "langchain",
    "agents",
    "complaint-processing",
    "ollama",
    "nlp",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "faster-whisper>=0.10.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.poetry]
name = "cucumbers-agents"
version = "1.0.0"
description = "LangChain-based multi-agent system for complaint processing"
authors = ["Cucumbers Team"]
readme = "README.md"
packages = [
    { include = "complaintagents" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = ">=0.1.0"
langchain-core = ">=0.1.0"
langchain-community = ">=0.0.10"
faster-whisper = ">=0.10.0"
httpx = ">=0.24.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
ruff = ">=0.1.0"
mypy = ">=1.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

